@@ -28,6 +28,7 @@ import android.net.IpPrefix;
 import android.net.IpSecManager;
 import android.net.IpSecTransform;
 import android.net.LinkAddress;
+import android.net.LinkProperties;
 import android.net.Network;
 import android.net.eap.EapAkaInfo;
 import android.net.eap.EapInfo;
@@ -50,6 +51,7 @@ import android.net.ipsec.ike.IkeTrafficSelector;
 import android.net.ipsec.ike.SaProposal;
 import android.net.ipsec.ike.TunnelModeChildSessionParams;
 import android.net.ipsec.ike.exceptions.IkeException;
+import android.net.ipsec.ike.exceptions.IkeIOException;
 import android.net.ipsec.ike.exceptions.IkeProtocolException;
 import android.net.ipsec.ike.ike3gpp.Ike3gppBackoffTimer;
 import android.net.ipsec.ike.ike3gpp.Ike3gppData;
@@ -74,9 +76,12 @@ import com.android.internal.annotations.VisibleForTesting;
 import com.google.android.iwlan.ErrorPolicyManager;
 import com.google.android.iwlan.IwlanError;
 import com.google.android.iwlan.IwlanHelper;
+import com.google.android.iwlan.IwlanTunnelMetricsImpl;
+import com.google.android.iwlan.TunnelMetricsInterface;
+import com.google.android.iwlan.TunnelMetricsInterface.OnClosedMetrics;
+import com.google.android.iwlan.TunnelMetricsInterface.OnOpenedMetrics;
 import com.google.android.iwlan.exceptions.IwlanSimNotReadyException;
 
-import java.io.FileDescriptor;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.net.Inet4Address;
@@ -85,11 +90,10 @@ import java.net.InetAddress;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Queue;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
@@ -99,9 +103,8 @@ import java.util.concurrent.TimeUnit;
 
 public class EpdgTunnelManager {
 
-    private Context mContext;
+    private final Context mContext;
     private final int mSlotId;
-    private HandlerThread mHandlerThread;
     private Handler mHandler;
 
     private static final int EVENT_TUNNEL_BRINGUP_REQUEST = 0;
@@ -144,29 +147,34 @@ public class EpdgTunnelManager {
     private static final String TRAFFIC_SELECTOR_IPV6_END_ADDR =
             "ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff";
 
-    private static Map<Integer, EpdgTunnelManager> mTunnelManagerInstances =
+    // "192.0.2.0" is selected from RFC5737, "IPv4 Address Blocks Reserved for Documentation"
+    private static final InetAddress DUMMY_ADDR = InetAddresses.parseNumericAddress("192.0.2.0");
+
+    private static final Map<Integer, EpdgTunnelManager> mTunnelManagerInstances =
             new ConcurrentHashMap<>();
 
     private Queue<TunnelRequestWrapper> mPendingBringUpRequests = new LinkedList<>();
 
-    private EpdgInfo mValidEpdgInfo = new EpdgInfo();
-    private InetAddress mEpdgAddress;
-    private Network mNetwork;
+    private final EpdgInfo mValidEpdgInfo = new EpdgInfo();
+    @Nullable private InetAddress mEpdgAddress;
+
+    // The most recently updated system default network as seen by IwlanDataService.
+    @Nullable private Network mDefaultNetwork;
+    // The latest Network provided to the IKE session. Only for debugging purposes.
+    @Nullable private Network mIkeSessionNetwork;
+
     private int mTransactionId = 0;
     private boolean mHasConnectedToEpdg;
-    private IkeSessionCreator mIkeSessionCreator;
+    private final IkeSessionCreator mIkeSessionCreator;
 
     private Map<String, TunnelConfig> mApnNameToTunnelConfig = new ConcurrentHashMap<>();
-    private Map<String, Integer> mApnNameToCurrentToken = new ConcurrentHashMap<>();
+    private final Map<String, Integer> mApnNameToCurrentToken = new ConcurrentHashMap<>();
 
     private final String TAG;
-
-    private List<InetAddress> mLocalAddresses;
 
     @Nullable private byte[] mNextReauthId = null;
     private long mEpdgServerSelectionDuration = 0;
     private long mEpdgServerSelectionStartTime = 0;
-    private long mIkeTunnelEstablishmentDuration = 0;
     private long mIkeTunnelEstablishmentStartTime = 0;
 
     private static final Set<Integer> VALID_DH_GROUPS;
@@ -176,53 +184,43 @@ public class EpdgTunnelManager {
     private static final Set<Integer> VALID_ENCRYPTION_ALGOS;
 
     private static final String CONFIG_TYPE_DH_GROUP = "dh group";
-    private static final String CONFIG_TYPE_KEY_LEN = "alogrithm key length";
+    private static final String CONFIG_TYPE_KEY_LEN = "algorithm key length";
     private static final String CONFIG_TYPE_PRF_ALGO = "prf algorithm";
     private static final String CONFIG_TYPE_INTEGRITY_ALGO = "integrity algorithm";
     private static final String CONFIG_TYPE_ENCRYPT_ALGO = "encryption algorithm";
 
     static {
         VALID_DH_GROUPS =
-                Collections.unmodifiableSet(
-                        new HashSet<>(
-                                Arrays.asList(
-                                        SaProposal.DH_GROUP_1024_BIT_MODP,
-                                        SaProposal.DH_GROUP_1536_BIT_MODP,
-                                        SaProposal.DH_GROUP_2048_BIT_MODP)));
+                Set.of(
+                        SaProposal.DH_GROUP_1024_BIT_MODP,
+                        SaProposal.DH_GROUP_1536_BIT_MODP,
+                        SaProposal.DH_GROUP_2048_BIT_MODP);
         VALID_KEY_LENGTHS =
-                Collections.unmodifiableSet(
-                        new HashSet<>(
-                                Arrays.asList(
-                                        SaProposal.KEY_LEN_AES_128,
-                                        SaProposal.KEY_LEN_AES_192,
-                                        SaProposal.KEY_LEN_AES_256)));
+                Set.of(
+                        SaProposal.KEY_LEN_AES_128,
+                        SaProposal.KEY_LEN_AES_192,
+                        SaProposal.KEY_LEN_AES_256);
 
         VALID_ENCRYPTION_ALGOS =
-                Collections.unmodifiableSet(
-                        new HashSet<>(
-                                Arrays.asList(
-                                        SaProposal.ENCRYPTION_ALGORITHM_AES_CBC,
-                                        SaProposal.ENCRYPTION_ALGORITHM_AES_CTR)));
+                Set.of(
+                        SaProposal.ENCRYPTION_ALGORITHM_AES_CBC,
+                        SaProposal.ENCRYPTION_ALGORITHM_AES_CTR);
 
         VALID_INTEGRITY_ALGOS =
-                Collections.unmodifiableSet(
-                        new HashSet<>(
-                                Arrays.asList(
-                                        SaProposal.INTEGRITY_ALGORITHM_HMAC_SHA1_96,
-                                        SaProposal.INTEGRITY_ALGORITHM_AES_XCBC_96,
-                                        SaProposal.INTEGRITY_ALGORITHM_HMAC_SHA2_256_128,
-                                        SaProposal.INTEGRITY_ALGORITHM_HMAC_SHA2_384_192,
-                                        SaProposal.INTEGRITY_ALGORITHM_HMAC_SHA2_512_256)));
+                Set.of(
+                        SaProposal.INTEGRITY_ALGORITHM_HMAC_SHA1_96,
+                        SaProposal.INTEGRITY_ALGORITHM_AES_XCBC_96,
+                        SaProposal.INTEGRITY_ALGORITHM_HMAC_SHA2_256_128,
+                        SaProposal.INTEGRITY_ALGORITHM_HMAC_SHA2_384_192,
+                        SaProposal.INTEGRITY_ALGORITHM_HMAC_SHA2_512_256);
 
         VALID_PRF_ALGOS =
-                Collections.unmodifiableSet(
-                        new HashSet<>(
-                                Arrays.asList(
-                                        SaProposal.PSEUDORANDOM_FUNCTION_HMAC_SHA1,
-                                        SaProposal.PSEUDORANDOM_FUNCTION_AES128_XCBC,
-                                        SaProposal.PSEUDORANDOM_FUNCTION_SHA2_256,
-                                        SaProposal.PSEUDORANDOM_FUNCTION_SHA2_384,
-                                        SaProposal.PSEUDORANDOM_FUNCTION_SHA2_512)));
+                Set.of(
+                        SaProposal.PSEUDORANDOM_FUNCTION_HMAC_SHA1,
+                        SaProposal.PSEUDORANDOM_FUNCTION_AES128_XCBC,
+                        SaProposal.PSEUDORANDOM_FUNCTION_SHA2_256,
+                        SaProposal.PSEUDORANDOM_FUNCTION_SHA2_384,
+                        SaProposal.PSEUDORANDOM_FUNCTION_SHA2_512);
     }
 
     private final EpdgSelector.EpdgSelectorCallback mSelectorCallback =
@@ -243,17 +241,27 @@ public class EpdgTunnelManager {
     @VisibleForTesting
     class TunnelConfig {
         @NonNull final TunnelCallback mTunnelCallback;
-        @NonNull final TunnelCallbackMetrics mTunnelCallbackMetrics;
+        @NonNull final TunnelMetricsInterface mTunnelMetrics;
         // TODO: Change this to TunnelLinkProperties after removing autovalue
         private List<InetAddress> mPcscfAddrList;
         private List<InetAddress> mDnsAddrList;
         private List<LinkAddress> mInternalAddrList;
 
-        private InetAddress mSrcIpv6Address;
-        private int mSrcIpv6AddressPrefixLen;
+        private final InetAddress mSrcIpv6Address;
+        private final int mSrcIpv6AddressPrefixLen;
         private NetworkSliceInfo mSliceInfo;
         private boolean mIsBackoffTimeValid = false;
         private long mBackoffTime;
+
+        private IkeSessionState mIkeSessionState;
+
+        public IkeSessionState getIkeSessionState() {
+            return mIkeSessionState;
+        }
+
+        public void setIkeSessionState(IkeSessionState ikeSessionState) {
+            mIkeSessionState = ikeSessionState;
+        }
 
         public NetworkSliceInfo getSliceInfo() {
             return mSliceInfo;
@@ -283,15 +291,17 @@ public class EpdgTunnelManager {
         public TunnelConfig(
                 IkeSession ikeSession,
                 TunnelCallback tunnelCallback,
-                TunnelCallbackMetrics tunnelCallbackMetrics,
+                TunnelMetricsInterface tunnelMetrics,
                 InetAddress srcIpv6Addr,
                 int srcIpv6PrefixLength) {
             mTunnelCallback = tunnelCallback;
-            mTunnelCallbackMetrics = tunnelCallbackMetrics;
+            mTunnelMetrics = tunnelMetrics;
             mIkeSession = ikeSession;
             mError = new IwlanError(IwlanError.NO_ERROR);
             mSrcIpv6Address = srcIpv6Addr;
             mSrcIpv6AddressPrefixLen = srcIpv6PrefixLength;
+
+            setIkeSessionState(IkeSessionState.IKE_SESSION_INIT_IN_PROGRESS);
         }
 
         @NonNull
@@ -300,8 +310,8 @@ public class EpdgTunnelManager {
         }
 
         @NonNull
-        TunnelCallbackMetrics getTunnelCallbackMetrics() {
-            return mTunnelCallbackMetrics;
+        TunnelMetricsInterface getTunnelMetrics() {
+            return mTunnelMetrics;
         }
 
         List<InetAddress> getPcscfAddrList() {
@@ -328,9 +338,7 @@ public class EpdgTunnelManager {
             if (laddr.isIpv6() && (laddr.getPrefixLength() == mSrcIpv6AddressPrefixLen)) {
                 IpPrefix assignedPrefix = new IpPrefix(laddr.getAddress(), laddr.getPrefixLength());
                 IpPrefix srcPrefix = new IpPrefix(mSrcIpv6Address, mSrcIpv6AddressPrefixLen);
-                if (assignedPrefix.equals(srcPrefix)) {
-                    return true;
-                }
+                return assignedPrefix.equals(srcPrefix);
             }
             return false;
         }
@@ -338,7 +346,7 @@ public class EpdgTunnelManager {
         public void setInternalAddrList(List<LinkAddress> internalAddrList) {
             mInternalAddrList = new ArrayList<LinkAddress>(internalAddrList);
             if (getSrcIpv6Address() != null) {
-                // check if we can reuse src ipv6 address (i.e if prefix is same)
+                // check if we can reuse src ipv6 address (i.e. if prefix is same)
                 for (LinkAddress assignedAddr : internalAddrList) {
                     if (isPrefixSameAsSrcIP(assignedAddr)) {
                         // the assigned IPv6 address is same as pre-Handover IPv6
@@ -387,21 +395,6 @@ public class EpdgTunnelManager {
             return mSrcIpv6Address;
         }
 
-        public int getSrcIpv6AddressPrefixLen() {
-            return mSrcIpv6AddressPrefixLen;
-        }
-
-        private String addressListString(List<InetAddress> list) {
-            StringBuilder sb = new StringBuilder();
-            sb.append("{ ");
-            for (InetAddress addr : list) {
-                sb.append(addr);
-                sb.append(", ");
-            }
-            sb.append(" }");
-            return sb.toString();
-        }
-
         public boolean hasTunnelOpened() {
             return mInternalAddrList != null
                     && !mInternalAddrList.isEmpty() /* The child session is opened */
@@ -412,34 +405,13 @@ public class EpdgTunnelManager {
         public String toString() {
             StringBuilder sb = new StringBuilder();
             sb.append("TunnelConfig { ");
-            /*if (mPcscfAddrList != null) {
-                sb.append("mPcscfAddrList: " + addressListString(mPcscfAddrList));
-                sb.append(", ");
-            }
-            if (mDnsAddrList != null) {
-                sb.append("mDnsAddrList: " + addressListString(mDnsAddrList));
-                sb.append(", ");
-            }
-            if (mInternalAddrList != null) {
-                sb.append("mInternalAddrList: { ");
-                for (LinkAddress addr : mInternalAddrList) {
-                    sb.append(addr + ", ");
-                }
-                sb.append(" }, ");
-            }
-
-            if (mSrcIpv6Address != null) {
-                sb.append("{mSrcIpv6Address: " + mSrcIpv6Address + "}, ");
-            } else {
-                sb.append("{NULL mSrcIpv6Address}, ");
-            } */
 
             if (mSliceInfo != null) {
-                sb.append("mSliceInfo: " + mSliceInfo + ", ");
+                sb.append("mSliceInfo: ").append(mSliceInfo).append(", ");
             }
 
             if (mIsBackoffTimeValid) {
-                sb.append("mBackoffTime: " + mBackoffTime + ", ");
+                sb.append("mBackoffTime: ").append(mBackoffTime).append(", ");
             }
             sb.append(" }");
             return sb.toString();
@@ -472,12 +444,11 @@ public class EpdgTunnelManager {
             mHandler.sendMessage(
                     mHandler.obtainMessage(
                             EVENT_IKE_SESSION_CLOSED,
-                            new SessionClosedData(
-                                    mApnName, mToken, new IwlanError(IwlanError.NO_ERROR))));
+                            new SessionClosedData(mApnName, mToken, null /* ikeException */)));
         }
 
         @Override
-        public void onClosedExceptionally(IkeException exception) {
+        public void onClosedWithException(IkeException exception) {
             mNextReauthId = null;
             onSessionClosedWithException(exception, mApnName, mToken, EVENT_IKE_SESSION_CLOSED);
         }
@@ -565,12 +536,11 @@ public class EpdgTunnelManager {
             mHandler.sendMessage(
                     mHandler.obtainMessage(
                             EVENT_CHILD_SESSION_CLOSED,
-                            new SessionClosedData(
-                                    mApnName, mToken, new IwlanError(IwlanError.NO_ERROR))));
+                            new SessionClosedData(mApnName, mToken, null /* ikeException */)));
         }
 
         @Override
-        public void onClosedExceptionally(IkeException exception) {
+        public void onClosedWithException(IkeException exception) {
             onSessionClosedWithException(exception, mApnName, mToken, EVENT_CHILD_SESSION_CLOSED);
         }
 
@@ -645,9 +615,9 @@ public class EpdgTunnelManager {
 
     @VisibleForTesting
     Looper getLooper() {
-        mHandlerThread = new HandlerThread("EpdgTunnelManagerThread");
-        mHandlerThread.start();
-        return mHandlerThread.getLooper();
+        HandlerThread handlerThread = new HandlerThread("EpdgTunnelManagerThread");
+        handlerThread.start();
+        return handlerThread.getLooper();
     }
 
     /**
@@ -684,66 +654,38 @@ public class EpdgTunnelManager {
         void onClosed(@NonNull String apnName, @NonNull IwlanError error);
     }
 
-    public interface TunnelCallbackMetrics {
-        /**
-         * Called for logging the tunnel is opened.
-         *
-         * @param apnName apn for which the tunnel was opened
-         * @param epdgServerAddress epdg server IP address for bringup the tunnel
-         * @param epdgServerSelectionDuration time for EpdgSelector doing FQDN
-         * @param ikeTunnelEstablishmentDuration time for IKE module processing tunnel
-         *     establishement
-         */
-        void onOpened(
-                @NonNull String apnName,
-                @Nullable String epdgServerAddress,
-                @NonNull int epdgServerSelectionDuration,
-                @NonNull int ikeTunnelEstablishmentDuration);
-        /**
-         * Called for logging the tunnel is closed or bringup failed.
-         *
-         * @param apnName apn for which the tunnel was closed
-         * @param epdgServerAddress epdg server IP address for bringup the tunnel
-         * @param epdgServerSelectionDuration time for EpdgSelector doing FQDN
-         * @param ikeTunnelEstablishmentDuration time for IKE module processing tunnel
-         *     establishement
-         */
-        void onClosed(
-                @NonNull String apnName,
-                @Nullable String epdgServerAddress,
-                @NonNull int epdgServerSelectionDuration,
-                @NonNull int ikeTunnelEstablishmentDuration);
-    }
-
     /**
      * Close tunnel for an apn. Confirmation of closing will be delivered in TunnelCallback that was
-     * provided in {@link #bringUpTunnel}
+     * provided in {@link #bringUpTunnel}. If no tunnel was available, callback will be delivered
+     * using client-provided provided tunnelCallback and iwlanTunnelMetrics
      *
      * @param apnName apn name
      * @param forceClose if true, results in local cleanup of tunnel
-     * @return true if params are valid and tunnel exists. False otherwise.
+     * @param tunnelCallback Used if no current or pending IWLAN tunnel exists
+     * @param iwlanTunnelMetrics Used to report metrics if no current or pending IWLAN tunnel exists
      */
-    public boolean closeTunnel(@NonNull String apnName, boolean forceClose) {
+    public void closeTunnel(
+            @NonNull String apnName,
+            boolean forceClose,
+            @NonNull TunnelCallback tunnelCallback,
+            @NonNull IwlanTunnelMetricsImpl iwlanTunnelMetrics) {
         mHandler.sendMessage(
                 mHandler.obtainMessage(
                         EVENT_TUNNEL_BRINGDOWN_REQUEST,
-                        forceClose ? 1 : 0,
-                        0 /*not used*/,
-                        apnName));
-        return true;
+                        new TunnelBringdownRequest(
+                                apnName, forceClose, tunnelCallback, iwlanTunnelMetrics)));
     }
 
     /**
      * Update the local Network. This will trigger a revaluation for every tunnel for which tunnel
      * manager has state.
      *
-     * <p>Tunnels in bringup state will be for closed since IKE currently keeps retrying.
-     *
-     * <p>For rest of the tunnels, update IKE session wth new network. This will either result in
-     * MOBIKE callflow or just a rekey over new Network
+     * @param network the network to be updated
+     * @param network the linkProperties to be updated
      */
-    public void updateNetwork(@NonNull Network network, String apnName) {
-        UpdateNetworkWrapper updateNetworkWrapper = new UpdateNetworkWrapper(network, apnName);
+    public void updateNetwork(Network network, LinkProperties linkProperties) {
+        UpdateNetworkWrapper updateNetworkWrapper =
+                new UpdateNetworkWrapper(network, linkProperties);
         mHandler.sendMessage(mHandler.obtainMessage(EVENT_UPDATE_NETWORK, updateNetworkWrapper));
     }
     /**
@@ -758,7 +700,7 @@ public class EpdgTunnelManager {
     public boolean bringUpTunnel(
             @NonNull TunnelSetupRequest setupRequest,
             @NonNull TunnelCallback tunnelCallback,
-            @NonNull TunnelCallbackMetrics tunnelCallbackMetrics) {
+            @NonNull TunnelMetricsInterface tunnelMetrics) {
         String apnName = setupRequest.apnName();
 
         if (getTunnelSetupRequestApnName(setupRequest) == null) {
@@ -783,7 +725,7 @@ public class EpdgTunnelManager {
         }
 
         TunnelRequestWrapper tunnelRequestWrapper =
-                new TunnelRequestWrapper(setupRequest, tunnelCallback, tunnelCallbackMetrics);
+                new TunnelRequestWrapper(setupRequest, tunnelCallback, tunnelMetrics);
 
         mHandler.sendMessage(
                 mHandler.obtainMessage(EVENT_TUNNEL_BRINGUP_REQUEST, tunnelRequestWrapper));
@@ -794,9 +736,9 @@ public class EpdgTunnelManager {
     private void onBringUpTunnel(
             TunnelSetupRequest setupRequest,
             TunnelCallback tunnelCallback,
-            TunnelCallbackMetrics tunnelCallbackMetrics) {
+            TunnelMetricsInterface tunnelMetrics) {
         String apnName = setupRequest.apnName();
-        IkeSessionParams ikeSessionParams = null;
+        IkeSessionParams ikeSessionParams;
 
         Log.d(
                 TAG,
@@ -813,7 +755,7 @@ public class EpdgTunnelManager {
             IwlanError iwlanError = new IwlanError(IwlanError.SIM_NOT_READY_EXCEPTION);
             reportIwlanError(apnName, iwlanError);
             tunnelCallback.onClosed(apnName, iwlanError);
-            tunnelCallbackMetrics.onClosed(apnName, null, 0, 0);
+            tunnelMetrics.onClosed(new OnClosedMetrics.Builder().setApnName(apnName).build());
             return;
         }
 
@@ -833,7 +775,7 @@ public class EpdgTunnelManager {
                 apnName,
                 ikeSession,
                 tunnelCallback,
-                tunnelCallbackMetrics,
+                tunnelMetrics,
                 isSrcIpv6Present ? setupRequest.srcIpv6Address().get() : null,
                 setupRequest.srcIpv6AddressPrefixLength());
     }
@@ -866,9 +808,9 @@ public class EpdgTunnelManager {
     private ChildSessionParams buildChildSessionParams(TunnelSetupRequest setupRequest) {
         int proto = setupRequest.apnIpProtocol();
         int hardTimeSeconds =
-                (int) getConfig(CarrierConfigManager.Iwlan.KEY_CHILD_SA_REKEY_HARD_TIMER_SEC_INT);
+                getConfig(CarrierConfigManager.Iwlan.KEY_CHILD_SA_REKEY_HARD_TIMER_SEC_INT);
         int softTimeSeconds =
-                (int) getConfig(CarrierConfigManager.Iwlan.KEY_CHILD_SA_REKEY_SOFT_TIMER_SEC_INT);
+                getConfig(CarrierConfigManager.Iwlan.KEY_CHILD_SA_REKEY_SOFT_TIMER_SEC_INT);
         if (!isValidChildSessionLifetime(hardTimeSeconds, softTimeSeconds)) {
             if (hardTimeSeconds > CHILD_HARD_LIFETIME_SEC_MAXIMUM
                     && softTimeSeconds > CHILD_SOFT_LIFETIME_SEC_MINIMUM) {
@@ -876,15 +818,11 @@ public class EpdgTunnelManager {
                 softTimeSeconds = CHILD_HARD_LIFETIME_SEC_MAXIMUM - LIFETIME_MARGIN_SEC_MINIMUM;
             } else {
                 hardTimeSeconds =
-                        (int)
-                                IwlanHelper.getDefaultConfig(
-                                        CarrierConfigManager.Iwlan
-                                                .KEY_CHILD_SA_REKEY_HARD_TIMER_SEC_INT);
+                        IwlanHelper.getDefaultConfig(
+                                CarrierConfigManager.Iwlan.KEY_CHILD_SA_REKEY_HARD_TIMER_SEC_INT);
                 softTimeSeconds =
-                        (int)
-                                IwlanHelper.getDefaultConfig(
-                                        CarrierConfigManager.Iwlan
-                                                .KEY_CHILD_SA_REKEY_SOFT_TIMER_SEC_INT);
+                        IwlanHelper.getDefaultConfig(
+                                CarrierConfigManager.Iwlan.KEY_CHILD_SA_REKEY_SOFT_TIMER_SEC_INT);
             }
             Log.d(
                     TAG,
@@ -898,7 +836,7 @@ public class EpdgTunnelManager {
                 new TunnelModeChildSessionParams.Builder()
                         .setLifetimeSeconds(hardTimeSeconds, softTimeSeconds);
 
-        childSessionParamsBuilder.addSaProposal(buildChildSaProposal());
+        childSessionParamsBuilder.addChildSaProposal(buildChildSaProposal());
 
         boolean handoverIPv4Present = setupRequest.srcIpv4Address().isPresent();
         boolean handoverIPv6Present = setupRequest.srcIpv6Address().isPresent();
@@ -969,7 +907,8 @@ public class EpdgTunnelManager {
     private @Nullable String getMobileDeviceIdentity() {
         TelephonyManager telephonyManager = mContext.getSystemService(TelephonyManager.class);
         telephonyManager =
-                telephonyManager.createForSubscriptionId(IwlanHelper.getSubId(mContext, mSlotId));
+                Objects.requireNonNull(telephonyManager)
+                        .createForSubscriptionId(IwlanHelper.getSubId(mContext, mSlotId));
         if (telephonyManager == null) {
             return null;
         }
@@ -992,9 +931,9 @@ public class EpdgTunnelManager {
             TunnelSetupRequest setupRequest, String apnName, int token)
             throws IwlanSimNotReadyException {
         int hardTimeSeconds =
-                (int) getConfig(CarrierConfigManager.Iwlan.KEY_IKE_REKEY_HARD_TIMER_SEC_INT);
+                getConfig(CarrierConfigManager.Iwlan.KEY_IKE_REKEY_HARD_TIMER_SEC_INT);
         int softTimeSeconds =
-                (int) getConfig(CarrierConfigManager.Iwlan.KEY_IKE_REKEY_SOFT_TIMER_SEC_INT);
+                getConfig(CarrierConfigManager.Iwlan.KEY_IKE_REKEY_SOFT_TIMER_SEC_INT);
         if (!isValidIkeSessionLifetime(hardTimeSeconds, softTimeSeconds)) {
             if (hardTimeSeconds > IKE_HARD_LIFETIME_SEC_MAXIMUM
                     && softTimeSeconds > IKE_SOFT_LIFETIME_SEC_MINIMUM) {
@@ -1002,15 +941,11 @@ public class EpdgTunnelManager {
                 softTimeSeconds = IKE_HARD_LIFETIME_SEC_MAXIMUM - LIFETIME_MARGIN_SEC_MINIMUM;
             } else {
                 hardTimeSeconds =
-                        (int)
-                                IwlanHelper.getDefaultConfig(
-                                        CarrierConfigManager.Iwlan
-                                                .KEY_IKE_REKEY_HARD_TIMER_SEC_INT);
+                        IwlanHelper.getDefaultConfig(
+                                CarrierConfigManager.Iwlan.KEY_IKE_REKEY_HARD_TIMER_SEC_INT);
                 softTimeSeconds =
-                        (int)
-                                IwlanHelper.getDefaultConfig(
-                                        CarrierConfigManager.Iwlan
-                                                .KEY_IKE_REKEY_SOFT_TIMER_SEC_INT);
+                        IwlanHelper.getDefaultConfig(
+                                CarrierConfigManager.Iwlan.KEY_IKE_REKEY_SOFT_TIMER_SEC_INT);
             }
             Log.d(
                     TAG,
@@ -1030,8 +965,8 @@ public class EpdgTunnelManager {
                         .setLocalIdentification(getLocalIdentification())
                         .setRemoteIdentification(getId(setupRequest.apnName(), false))
                         .setAuthEap(null, getEapConfig())
-                        .addSaProposal(buildIkeSaProposal())
-                        .setNetwork(mNetwork)
+                        .addIkeSaProposal(buildIkeSaProposal())
+                        .setNetwork(mDefaultNetwork)
                         .addIkeOption(IkeSessionParams.IKE_OPTION_ACCEPT_ANY_REMOTE_ID)
                         .addIkeOption(IkeSessionParams.IKE_OPTION_MOBIKE)
                         .addIkeOption(IkeSessionParams.IKE_OPTION_REKEY_MOBILITY)
@@ -1074,11 +1009,13 @@ public class EpdgTunnelManager {
             }
         }
 
-        if (setupRequest.pduSessionId() != 0) {
-            if (builder3gppParams == null) {
+        if (isN1ModeSupported()) {
+            if (setupRequest.pduSessionId() != 0) {
+                // Configures the PduSession ID in N1_MODE_CAPABILITY payload
+                // to notify the server that UE supports N1_MODE
                 builder3gppParams = new Ike3gppParams.Builder();
+                builder3gppParams.setPduSessionId((byte) setupRequest.pduSessionId());
             }
-            builder3gppParams.setPduSessionId((byte) setupRequest.pduSessionId());
         }
 
         if (builder3gppParams != null) {
@@ -1089,14 +1026,13 @@ public class EpdgTunnelManager {
         }
 
         int nattKeepAliveTimer =
-                (int) getConfig(CarrierConfigManager.Iwlan.KEY_NATT_KEEP_ALIVE_TIMER_SEC_INT);
+                getConfig(CarrierConfigManager.Iwlan.KEY_NATT_KEEP_ALIVE_TIMER_SEC_INT);
         if (nattKeepAliveTimer < NATT_KEEPALIVE_DELAY_SEC_MIN
                 || nattKeepAliveTimer > NATT_KEEPALIVE_DELAY_SEC_MAX) {
             Log.d(TAG, "Falling back to default natt keep alive timer");
             nattKeepAliveTimer =
-                    (int)
-                            IwlanHelper.getDefaultConfig(
-                                    CarrierConfigManager.Iwlan.KEY_NATT_KEEP_ALIVE_TIMER_SEC_INT);
+                    IwlanHelper.getDefaultConfig(
+                            CarrierConfigManager.Iwlan.KEY_NATT_KEEP_ALIVE_TIMER_SEC_INT);
         }
         builder.setNattKeepAliveDelaySeconds(nattKeepAliveTimer);
 
@@ -1104,23 +1040,17 @@ public class EpdgTunnelManager {
     }
 
     private boolean isValidChildSessionLifetime(int hardLifetimeSeconds, int softLifetimeSeconds) {
-        if (hardLifetimeSeconds < CHILD_HARD_LIFETIME_SEC_MINIMUM
-                || hardLifetimeSeconds > CHILD_HARD_LIFETIME_SEC_MAXIMUM
-                || softLifetimeSeconds < CHILD_SOFT_LIFETIME_SEC_MINIMUM
-                || hardLifetimeSeconds - softLifetimeSeconds < LIFETIME_MARGIN_SEC_MINIMUM) {
-            return false;
-        }
-        return true;
+        return hardLifetimeSeconds >= CHILD_HARD_LIFETIME_SEC_MINIMUM
+                && hardLifetimeSeconds <= CHILD_HARD_LIFETIME_SEC_MAXIMUM
+                && softLifetimeSeconds >= CHILD_SOFT_LIFETIME_SEC_MINIMUM
+                && hardLifetimeSeconds - softLifetimeSeconds >= LIFETIME_MARGIN_SEC_MINIMUM;
     }
 
     private boolean isValidIkeSessionLifetime(int hardLifetimeSeconds, int softLifetimeSeconds) {
-        if (hardLifetimeSeconds < IKE_HARD_LIFETIME_SEC_MINIMUM
-                || hardLifetimeSeconds > IKE_HARD_LIFETIME_SEC_MAXIMUM
-                || softLifetimeSeconds < IKE_SOFT_LIFETIME_SEC_MINIMUM
-                || hardLifetimeSeconds - softLifetimeSeconds < LIFETIME_MARGIN_SEC_MINIMUM) {
-            return false;
-        }
-        return true;
+        return hardLifetimeSeconds >= IKE_HARD_LIFETIME_SEC_MINIMUM
+                && hardLifetimeSeconds <= IKE_HARD_LIFETIME_SEC_MAXIMUM
+                && softLifetimeSeconds >= IKE_SOFT_LIFETIME_SEC_MINIMUM
+                && hardLifetimeSeconds - softLifetimeSeconds >= LIFETIME_MARGIN_SEC_MINIMUM;
     }
 
     private <T> T getConfig(String configKey) {
@@ -1320,7 +1250,6 @@ public class EpdgTunnelManager {
 
     private void onSessionClosedWithException(
             IkeException exception, String apnName, int token, int sessionType) {
-        IwlanError error = new IwlanError(exception);
         Log.e(
                 TAG,
                 "Closing tunnel with exception for apn: "
@@ -1328,13 +1257,12 @@ public class EpdgTunnelManager {
                         + " with token: "
                         + token
                         + " sessionType:"
-                        + sessionType
-                        + " error: "
-                        + error);
+                        + sessionType);
         exception.printStackTrace();
 
         mHandler.sendMessage(
-                mHandler.obtainMessage(sessionType, new SessionClosedData(apnName, token, error)));
+                mHandler.obtainMessage(
+                        sessionType, new SessionClosedData(apnName, token, exception)));
     }
 
     private boolean isEpdgSelectionOrFirstTunnelBringUpInProgress() {
@@ -1346,8 +1274,19 @@ public class EpdgTunnelManager {
                 || !mPendingBringUpRequests.isEmpty();
     }
 
+    private IwlanError getErrorFromIkeException(
+            IkeException ikeException, IkeSessionState ikeSessionState) {
+        IwlanError error;
+        if (ikeException instanceof IkeIOException) {
+            error = new IwlanError(ikeSessionState.getErrorType(), ikeException);
+        } else {
+            error = new IwlanError(ikeException);
+        }
+        Log.e(TAG, "Closing tunnel: error: " + error + " state: " + ikeSessionState);
+        return error;
+    }
+
     private final class TmHandler extends Handler {
-        private final String TAG = TmHandler.class.getSimpleName();
 
         @Override
         public void handleMessage(Message msg) {
@@ -1355,7 +1294,7 @@ public class EpdgTunnelManager {
 
             String apnName;
             TunnelConfig tunnelConfig;
-
+            OnClosedMetrics.Builder onClosedMetricsBuilder;
             switch (msg.what) {
                 case EVENT_CHILD_SESSION_OPENED:
                 case EVENT_IKE_SESSION_CLOSED:
@@ -1376,35 +1315,37 @@ public class EpdgTunnelManager {
                     }
             }
 
+            long mIkeTunnelEstablishmentDuration;
             switch (msg.what) {
                 case EVENT_TUNNEL_BRINGUP_REQUEST:
                     TunnelRequestWrapper tunnelRequestWrapper = (TunnelRequestWrapper) msg.obj;
                     TunnelSetupRequest setupRequest = tunnelRequestWrapper.getSetupRequest();
+                    IwlanError bringUpError = null;
+
+                    onClosedMetricsBuilder =
+                            new OnClosedMetrics.Builder().setApnName(setupRequest.apnName());
 
                     if (IwlanHelper.getSubId(mContext, mSlotId)
                             == SubscriptionManager.INVALID_SUBSCRIPTION_ID) {
                         Log.e(TAG, "SIM isn't ready");
-                        IwlanError iwlanError = new IwlanError(IwlanError.SIM_NOT_READY_EXCEPTION);
-                        reportIwlanError(setupRequest.apnName(), iwlanError);
-                        tunnelRequestWrapper
-                                .getTunnelCallback()
-                                .onClosed(setupRequest.apnName(), iwlanError);
-                        tunnelRequestWrapper
-                                .getTunnelCallbackMetrics()
-                                .onClosed(setupRequest.apnName(), null, 0, 0);
-                        return;
+                        bringUpError = new IwlanError(IwlanError.SIM_NOT_READY_EXCEPTION);
+                        reportIwlanError(setupRequest.apnName(), bringUpError);
+                    } else if (Objects.isNull(mDefaultNetwork)) {
+                        Log.e(TAG, "The default network is not ready");
+                        bringUpError = new IwlanError(IwlanError.IKE_INTERNAL_IO_EXCEPTION);
+                        reportIwlanError(setupRequest.apnName(), bringUpError);
+                    } else if (!canBringUpTunnel(setupRequest.apnName())) {
+                        Log.d(TAG, "Cannot bring up tunnel as retry time has not passed");
+                        bringUpError = getLastError(setupRequest.apnName());
                     }
 
-                    if (!canBringUpTunnel(setupRequest.apnName())) {
-                        Log.d(TAG, "Cannot bring up tunnel as retry time has not passed");
+                    if (Objects.nonNull(bringUpError)) {
                         tunnelRequestWrapper
                                 .getTunnelCallback()
-                                .onClosed(
-                                        setupRequest.apnName(),
-                                        getLastError(setupRequest.apnName()));
+                                .onClosed(setupRequest.apnName(), bringUpError);
                         tunnelRequestWrapper
-                                .getTunnelCallbackMetrics()
-                                .onClosed(setupRequest.apnName(), null, 0, 0);
+                                .getTunnelMetrics()
+                                .onClosed(onClosedMetricsBuilder.build());
                         return;
                     }
 
@@ -1413,13 +1354,12 @@ public class EpdgTunnelManager {
                         onBringUpTunnel(
                                 setupRequest,
                                 tunnelRequestWrapper.getTunnelCallback(),
-                                tunnelRequestWrapper.getTunnelCallbackMetrics());
+                                tunnelRequestWrapper.getTunnelMetrics());
                         break;
                     }
 
                     if (!isEpdgSelectionOrFirstTunnelBringUpInProgress()) {
                         // No tunnel bring-up in progress. Select the ePDG address first
-                        mNetwork = setupRequest.network();
                         selectEpdgAddress(setupRequest);
                     }
 
@@ -1448,7 +1388,7 @@ public class EpdgTunnelManager {
                         onBringUpTunnel(
                                 tunnelRequestWrapper.getSetupRequest(),
                                 tunnelRequestWrapper.getTunnelCallback(),
-                                tunnelRequestWrapper.getTunnelCallbackMetrics());
+                                tunnelRequestWrapper.getTunnelMetrics());
                     } else {
                         IwlanError error =
                                 (selectorResult.getEpdgError().getErrorType()
@@ -1495,17 +1435,22 @@ public class EpdgTunnelManager {
                             System.currentTimeMillis() - mIkeTunnelEstablishmentStartTime;
                     mIkeTunnelEstablishmentStartTime = 0;
                     tunnelConfig
-                            .getTunnelCallbackMetrics()
+                            .getTunnelMetrics()
                             .onOpened(
-                                    apnName,
-                                    mEpdgAddress.getHostAddress(),
-                                    (int) mEpdgServerSelectionDuration,
-                                    (int) mIkeTunnelEstablishmentDuration);
+                                    new OnOpenedMetrics.Builder()
+                                            .setApnName(apnName)
+                                            .setEpdgServerAddress(mEpdgAddress)
+                                            .setEpdgServerSelectionDuration(
+                                                    (int) mEpdgServerSelectionDuration)
+                                            .setIkeTunnelEstablishmentDuration(
+                                                    (int) mIkeTunnelEstablishmentDuration)
+                                            .build());
 
-                    setHasConnectedToEpdg(true);
+                    onConnectedToEpdg(true);
                     mValidEpdgInfo.resetIndex();
                     printRequestQueue("EVENT_CHILD_SESSION_OPENED");
                     serviceAllPendingRequests();
+                    tunnelConfig.setIkeSessionState(IkeSessionState.CHILD_SESSION_OPENED);
                     break;
 
                 case EVENT_IKE_SESSION_CLOSED:
@@ -1521,17 +1466,23 @@ public class EpdgTunnelManager {
 
                     // If IKE session closed exceptionally, we retrieve IwlanError directly from the
                     // exception; otherwise, it is still possible that we triggered an IKE session
-                    // close due to an error (eg. IwlanError.TUNNEL_TRANSFORM_FAILED), or because
+                    // close due to an error (e.g. IwlanError.TUNNEL_TRANSFORM_FAILED), or because
                     // the Child session closed exceptionally; in which case, we attempt to retrieve
                     // the stored error (if any) from TunnelConfig.
                     IwlanError iwlanError;
-                    if (sessionClosedData.mIwlanError.getErrorType() != IwlanError.NO_ERROR) {
-                        iwlanError = sessionClosedData.mIwlanError;
+                    if (sessionClosedData.mIkeException != null) {
+                        iwlanError =
+                                getErrorFromIkeException(
+                                        sessionClosedData.mIkeException,
+                                        tunnelConfig.getIkeSessionState());
                     } else {
-                        // If IKE session setup failed without error cause, Iwlan reports
-                        // NETWORK_FAILURE instead of NO_ERROR
+                        // If IKE session opened, then closed before child session (and IWLAN
+                        // tunnel) opened.
+                        // Iwlan reports IKE_SESSION_CLOSED_BEFORE_CHILD_SESSION_OPENED
+                        // instead of NO_ERROR
                         if (!tunnelConfig.hasTunnelOpened()) {
-                            iwlanError = new IwlanError(IwlanError.NETWORK_FAILURE);
+                            iwlanError = new IwlanError(
+                                    IwlanError.IKE_SESSION_CLOSED_BEFORE_CHILD_SESSION_OPENED);
                         } else {
                             iwlanError = tunnelConfig.getError();
                         }
@@ -1551,11 +1502,13 @@ public class EpdgTunnelManager {
                     }
 
                     Log.d(TAG, "Tunnel Closed: " + iwlanError);
+                    tunnelConfig.setIkeSessionState(IkeSessionState.NO_IKE_SESSION);
                     tunnelConfig.getTunnelCallback().onClosed(apnName, iwlanError);
+                    onClosedMetricsBuilder = new OnClosedMetrics.Builder().setApnName(apnName);
 
                     if (!mHasConnectedToEpdg) {
                         failAllPendingRequests(iwlanError);
-                        tunnelConfig.getTunnelCallbackMetrics().onClosed(apnName, null, 0, 0);
+                        tunnelConfig.getTunnelMetrics().onClosed(onClosedMetricsBuilder.build());
                     } else {
                         mIkeTunnelEstablishmentDuration =
                                 mIkeTunnelEstablishmentStartTime > 0
@@ -1564,54 +1517,81 @@ public class EpdgTunnelManager {
                                         : 0;
                         mIkeTunnelEstablishmentStartTime = 0;
 
-                        tunnelConfig
-                                .getTunnelCallbackMetrics()
-                                .onClosed(
-                                        apnName,
-                                        mEpdgAddress.getHostAddress(),
-                                        (int) mEpdgServerSelectionDuration,
+                        onClosedMetricsBuilder
+                                .setEpdgServerAddress(mEpdgAddress)
+                                .setEpdgServerSelectionDuration((int) mEpdgServerSelectionDuration)
+                                .setIkeTunnelEstablishmentDuration(
                                         (int) mIkeTunnelEstablishmentDuration);
+                        tunnelConfig.getTunnelMetrics().onClosed(onClosedMetricsBuilder.build());
                     }
 
                     mApnNameToTunnelConfig.remove(apnName);
                     if (mApnNameToTunnelConfig.size() == 0 && mPendingBringUpRequests.isEmpty()) {
-                        resetTunnelManagerState();
+                        onConnectedToEpdg(false);
                     }
+
                     break;
 
                 case EVENT_UPDATE_NETWORK:
                     UpdateNetworkWrapper updatedNetwork = (UpdateNetworkWrapper) msg.obj;
-                    apnName = updatedNetwork.getApnName();
-                    Network network = updatedNetwork.getNetwork();
-                    tunnelConfig = mApnNameToTunnelConfig.get(apnName);
+                    mDefaultNetwork = updatedNetwork.getNetwork();
+                    LinkProperties defaultLinkProperties = updatedNetwork.getLinkProperties();
+                    String paraString = "Network: " + mDefaultNetwork;
 
-                    // Update the global cache if they aren't equal
-                    if (mNetwork == null || !mNetwork.equals(network)) {
-                        Log.d(TAG, "Updating mNetwork to " + network);
-                        mNetwork = network;
-                    }
-
-                    if (tunnelConfig == null) {
-                        Log.d(TAG, "Update Network request: No tunnel exists for apn: " + apnName);
-                    } else {
-                        Log.d(TAG, "Updating Network for apn: " + apnName + " Network: " + network);
-                        tunnelConfig.getIkeSession().setNetwork(network);
+                    if (mHasConnectedToEpdg) {
+                        if (Objects.isNull(mDefaultNetwork)) {
+                            Log.w(TAG, "The default network has been removed.");
+                        } else if (Objects.isNull(defaultLinkProperties)) {
+                            Log.w(
+                                    TAG,
+                                    "The default network's LinkProperties is not ready ."
+                                            + paraString);
+                        } else if (!defaultLinkProperties.isReachable(mEpdgAddress)) {
+                            Log.w(
+                                    TAG,
+                                    "The default network link "
+                                            + defaultLinkProperties
+                                            + " doesn't have a route to the ePDG "
+                                            + mEpdgAddress
+                                            + paraString);
+                        } else if (Objects.equals(mDefaultNetwork, mIkeSessionNetwork)) {
+                            Log.w(
+                                    TAG,
+                                    "The default network has not changed from the IKE session"
+                                            + " network. "
+                                            + paraString);
+                        } else {
+                            mApnNameToTunnelConfig.forEach(
+                                    (apn, config) -> {
+                                        Log.d(
+                                                TAG,
+                                                "The Underlying Network is updating for APN (+"
+                                                        + apn
+                                                        + "). "
+                                                        + paraString);
+                                        config.getIkeSession().setNetwork(mDefaultNetwork);
+                                        config.setIkeSessionState(
+                                                IkeSessionState.IKE_MOBILITY_IN_PROGRESS);
+                                    });
+                            mIkeSessionNetwork = mDefaultNetwork;
+                        }
                     }
                     break;
 
                 case EVENT_TUNNEL_BRINGDOWN_REQUEST:
-                    apnName = (String) msg.obj;
-                    int forceClose = msg.arg1;
+                    TunnelBringdownRequest bringdownRequest = (TunnelBringdownRequest) msg.obj;
+                    apnName = bringdownRequest.mApnName;
+                    boolean forceClose = bringdownRequest.mForceClose;
                     tunnelConfig = mApnNameToTunnelConfig.get(apnName);
                     if (tunnelConfig == null) {
-                        Log.d(
+                        Log.w(
                                 TAG,
                                 "Bringdown request: No tunnel exists for apn: "
                                         + apnName
                                         + "forced: "
                                         + forceClose);
                     } else {
-                        if (forceClose == 1) {
+                        if (forceClose) {
                             tunnelConfig.getIkeSession().kill();
                         } else {
                             tunnelConfig.getIkeSession().close();
@@ -1620,6 +1600,15 @@ public class EpdgTunnelManager {
                     int numClosed = closePendingRequestsForApn(apnName);
                     if (numClosed > 0) {
                         Log.d(TAG, "Closed " + numClosed + " pending requests for apn: " + apnName);
+                    }
+                    if (tunnelConfig == null && numClosed == 0) {
+                        // IwlanDataService expected to close a (pending or up) tunnel but was not
+                        // found. Recovers state in IwlanDataService through TunnelCallback.
+                        iwlanError = new IwlanError(IwlanError.TUNNEL_NOT_FOUND);
+                        reportIwlanError(apnName, iwlanError);
+                        bringdownRequest.mTunnelCallback.onClosed(apnName, iwlanError);
+                        bringdownRequest.mIwlanTunnelMetrics.onClosed(
+                                new OnClosedMetrics.Builder().setApnName(apnName).build());
                     }
                     break;
 
@@ -1630,30 +1619,12 @@ public class EpdgTunnelManager {
                     tunnelConfig = mApnNameToTunnelConfig.get(apnName);
 
                     if (tunnelConfig.getIface() == null) {
-                        if (mLocalAddresses == null
-                                || mLocalAddresses.size() == 0
-                                || ipSecManager == null) {
-                            Log.e(TAG, "No local addresses found.");
-                            closeIkeSession(
-                                    apnName, new IwlanError(IwlanError.TUNNEL_TRANSFORM_FAILED));
-                            return;
-                        }
-
                         try {
-                            if (mEpdgAddress instanceof Inet4Address
-                                    && !IwlanHelper.hasIpv4Address(mLocalAddresses)) {
-                                mLocalAddresses =
-                                        IwlanHelper.getStackedAddressesForNetwork(
-                                                mNetwork, mContext);
-                            }
-                            InetAddress localAddress =
-                                    (mEpdgAddress instanceof Inet4Address)
-                                            ? IwlanHelper.getIpv4Address(mLocalAddresses)
-                                            : IwlanHelper.getIpv6Address(mLocalAddresses);
-                            Log.d(TAG, "Local address = " + localAddress);
                             tunnelConfig.setIface(
                                     ipSecManager.createIpSecTunnelInterface(
-                                            localAddress, mEpdgAddress, mNetwork));
+                                            DUMMY_ADDR /* unused */,
+                                            DUMMY_ADDR /* unused */,
+                                            mDefaultNetwork));
                         } catch (IpSecManager.ResourceUnavailableException | IOException e) {
                             Log.e(TAG, "Failed to create tunnel interface. " + e);
                             closeIkeSession(
@@ -1663,6 +1634,7 @@ public class EpdgTunnelManager {
                     }
 
                     try {
+                        assert ipSecManager != null;
                         ipSecManager.applyTunnelModeTransform(
                                 tunnelConfig.getIface(),
                                 transformData.getDirection(),
@@ -1673,6 +1645,10 @@ public class EpdgTunnelManager {
                         Log.e(TAG, "Failed to apply tunnel transform." + e);
                         closeIkeSession(
                                 apnName, new IwlanError(IwlanError.TUNNEL_TRANSFORM_FAILED));
+                    }
+                    if (tunnelConfig.getIkeSessionState()
+                            == IkeSessionState.IKE_MOBILITY_IN_PROGRESS) {
+                        tunnelConfig.setIkeSessionState(IkeSessionState.CHILD_SESSION_OPENED);
                     }
                     break;
 
@@ -1691,7 +1667,12 @@ public class EpdgTunnelManager {
                         Log.d(TAG, "No tunnel callback for apn: " + apnName);
                         return;
                     }
-                    tunnelConfig.setError(sessionClosedData.mIwlanError);
+                    if (sessionClosedData.mIkeException != null) {
+                        tunnelConfig.setError(
+                                getErrorFromIkeException(
+                                        sessionClosedData.mIkeException,
+                                        tunnelConfig.getIkeSessionState()));
+                    }
                     tunnelConfig.getIkeSession().close();
                     break;
 
@@ -1705,10 +1686,9 @@ public class EpdgTunnelManager {
                     tunnelConfig.setPcscfAddrList(sessionConfiguration.getPcscfServers());
 
                     boolean enabledFastReauth =
-                            (boolean)
-                                    getConfig(
-                                            CarrierConfigManager.Iwlan
-                                                    .KEY_SUPPORTS_EAP_AKA_FAST_REAUTH_BOOL);
+                            getConfig(
+                                    CarrierConfigManager.Iwlan
+                                            .KEY_SUPPORTS_EAP_AKA_FAST_REAUTH_BOOL);
                     Log.d(
                             TAG,
                             "CarrierConfigManager.Iwlan.KEY_SUPPORTS_EAP_AKA_FAST_REAUTH_BOOL "
@@ -1716,7 +1696,7 @@ public class EpdgTunnelManager {
 
                     if (enabledFastReauth) {
                         EapInfo eapInfo = sessionConfiguration.getEapInfo();
-                        if (eapInfo != null && eapInfo instanceof EapAkaInfo) {
+                        if (eapInfo instanceof EapAkaInfo) {
                             mNextReauthId = ((EapAkaInfo) eapInfo).getReauthId();
                             Log.d(TAG, "Update ReauthId: " + Arrays.toString(mNextReauthId));
                         } else {
@@ -1728,12 +1708,14 @@ public class EpdgTunnelManager {
                 case EVENT_IKE_SESSION_CONNECTION_INFO_CHANGED:
                     IkeSessionConnectionInfoData ikeSessionConnectionInfoData =
                             (IkeSessionConnectionInfoData) msg.obj;
-                    network = ikeSessionConnectionInfoData.mIkeSessionConnectionInfo.getNetwork();
+                    Network network =
+                            ikeSessionConnectionInfoData.mIkeSessionConnectionInfo.getNetwork();
                     apnName = ikeSessionConnectionInfoData.mApnName;
 
                     ConnectivityManager connectivityManager =
                             mContext.getSystemService(ConnectivityManager.class);
-                    if (connectivityManager.getLinkProperties(network) == null) {
+                    if (Objects.requireNonNull(connectivityManager).getLinkProperties(network)
+                            == null) {
                         Log.e(TAG, "Network " + network + " has null LinkProperties!");
                         return;
                     }
@@ -1810,11 +1792,11 @@ public class EpdgTunnelManager {
                         mContext,
                         mSlotId);
 
-        if (isIpPreferenceConflictsWithNetwork(ipPreference, mNetwork)) {
+        IpPreferenceConflict ipPreferenceConflict =
+                isIpPreferenceConflictsWithNetwork(ipPreference);
+        if (ipPreferenceConflict.mIsConflict) {
             sendSelectionRequestComplete(
-                    null,
-                    new IwlanError(IwlanError.EPDG_SELECTOR_SERVER_SELECTION_FAILED),
-                    mTransactionId);
+                    null, new IwlanError(ipPreferenceConflict.mErrorType), mTransactionId);
             return;
         }
 
@@ -1847,7 +1829,7 @@ public class EpdgTunnelManager {
                         epdgAddressOrder,
                         setupRequest.isRoaming(),
                         setupRequest.isEmergency(),
-                        mNetwork,
+                        mDefaultNetwork,
                         mSelectorCallback);
 
         if (epdgError.getErrorType() != IwlanError.NO_ERROR) {
@@ -1871,18 +1853,18 @@ public class EpdgTunnelManager {
 
         for (int count = 0; count < queueSize; count++) {
             TunnelRequestWrapper requestWrapper = mPendingBringUpRequests.remove();
-            if (requestWrapper.getSetupRequest().apnName() == apnName) {
+            if (requestWrapper.getSetupRequest().apnName().equals(apnName)) {
                 requestWrapper
                         .getTunnelCallback()
                         .onClosed(apnName, new IwlanError(IwlanError.NO_ERROR));
 
                 requestWrapper
-                        .getTunnelCallbackMetrics()
+                        .getTunnelMetrics()
                         .onClosed(
-                                apnName,
-                                mEpdgAddress == null ? null : mEpdgAddress.getHostAddress(),
-                                0,
-                                0);
+                                new OnClosedMetrics.Builder()
+                                        .setApnName(apnName)
+                                        .setEpdgServerAddress(mEpdgAddress)
+                                        .build());
                 numRequestsClosed++;
             } else {
                 mPendingBringUpRequests.add(requestWrapper);
@@ -1911,17 +1893,6 @@ public class EpdgTunnelManager {
         mValidEpdgInfo.incrementIndex();
     }
 
-    @VisibleForTesting
-    void resetTunnelManagerState() {
-        Log.d(TAG, "resetTunnelManagerState");
-        mEpdgAddress = null;
-        setHasConnectedToEpdg(false);
-        mNetwork = null;
-        mPendingBringUpRequests = new LinkedList<>();
-        mApnNameToTunnelConfig = new ConcurrentHashMap<>();
-        mLocalAddresses = null;
-    }
-
     private void serviceAllPendingRequests() {
         while (!mPendingBringUpRequests.isEmpty()) {
             Log.d(TAG, "serviceAllPendingRequests");
@@ -1929,7 +1900,7 @@ public class EpdgTunnelManager {
             onBringUpTunnel(
                     request.getSetupRequest(),
                     request.getTunnelCallback(),
-                    request.getTunnelCallbackMetrics());
+                    request.getTunnelMetrics());
         }
     }
 
@@ -1940,12 +1911,12 @@ public class EpdgTunnelManager {
             TunnelSetupRequest setupRequest = request.getSetupRequest();
             reportIwlanError(setupRequest.apnName(), error);
             request.getTunnelCallback().onClosed(setupRequest.apnName(), error);
-            request.getTunnelCallbackMetrics()
+            request.getTunnelMetrics()
                     .onClosed(
-                            setupRequest.apnName(),
-                            mEpdgAddress == null ? null : mEpdgAddress.getHostAddress(),
-                            0,
-                            0);
+                            new OnClosedMetrics.Builder()
+                                    .setApnName(setupRequest.apnName())
+                                    .setEpdgServerAddress(mEpdgAddress)
+                                    .build());
         }
     }
 
@@ -1960,35 +1931,36 @@ public class EpdgTunnelManager {
     // Update Network wrapper
     private static final class UpdateNetworkWrapper {
         private final Network mNetwork;
-        private final String mApnName;
+        private final LinkProperties mLinkProperties;
 
-        private UpdateNetworkWrapper(Network network, String apnName) {
+        private UpdateNetworkWrapper(Network network, LinkProperties linkProperties) {
             mNetwork = network;
-            mApnName = apnName;
-        }
-
-        public String getApnName() {
-            return mApnName;
+            mLinkProperties = linkProperties;
         }
 
         public Network getNetwork() {
             return mNetwork;
         }
+
+        public LinkProperties getLinkProperties() {
+            return mLinkProperties;
+        }
     }
+
     // Tunnel request + tunnel callback
     private static final class TunnelRequestWrapper {
         private final TunnelSetupRequest mSetupRequest;
 
         private final TunnelCallback mTunnelCallback;
-        private final TunnelCallbackMetrics mTunnelCallbackMetrics;
+        private final TunnelMetricsInterface mTunnelMetrics;
 
         private TunnelRequestWrapper(
                 TunnelSetupRequest setupRequest,
                 TunnelCallback tunnelCallback,
-                TunnelCallbackMetrics tunnelCallbackMetrics) {
+                TunnelMetricsInterface tunnelMetrics) {
             mTunnelCallback = tunnelCallback;
             mSetupRequest = setupRequest;
-            mTunnelCallbackMetrics = tunnelCallbackMetrics;
+            mTunnelMetrics = tunnelMetrics;
         }
 
         public TunnelSetupRequest getSetupRequest() {
@@ -1999,8 +1971,26 @@ public class EpdgTunnelManager {
             return mTunnelCallback;
         }
 
-        public TunnelCallbackMetrics getTunnelCallbackMetrics() {
-            return mTunnelCallbackMetrics;
+        public TunnelMetricsInterface getTunnelMetrics() {
+            return mTunnelMetrics;
+        }
+    }
+
+    private static final class TunnelBringdownRequest {
+        final String mApnName;
+        final boolean mForceClose;
+        final TunnelCallback mTunnelCallback;
+        final IwlanTunnelMetricsImpl mIwlanTunnelMetrics;
+
+        private TunnelBringdownRequest(
+                String apnName,
+                boolean forceClose,
+                TunnelCallback tunnelCallback,
+                IwlanTunnelMetricsImpl iwlanTunnelMetrics) {
+            mApnName = apnName;
+            mForceClose = forceClose;
+            mTunnelCallback = tunnelCallback;
+            mIwlanTunnelMetrics = iwlanTunnelMetrics;
         }
     }
 
@@ -2079,17 +2069,12 @@ public class EpdgTunnelManager {
     // Data received from IkeSessionStateMachine if either IKE session or Child session have been
     // closed, normally or exceptionally.
     private static final class SessionClosedData extends IkeEventData {
-        final IwlanError mIwlanError;
+        final IkeException mIkeException;
 
-        private SessionClosedData(String apnName, int token, IwlanError iwlanError) {
+        private SessionClosedData(String apnName, int token, IkeException ikeException) {
             super(apnName, token);
-            mIwlanError = iwlanError;
+            mIkeException = ikeException;
         }
-    }
-
-    public void releaseInstance() {
-        mHandlerThread.quit();
-        mTunnelManagerInstances.remove(mSlotId);
     }
 
     private static final class IpsecTransformData extends IkeEventData {
@@ -2161,16 +2146,28 @@ public class EpdgTunnelManager {
         }
     }
 
-    private int[] getRetransmissionTimeoutsFromConfig() {
-        int[] timeList =
-                (int[]) getConfig(CarrierConfigManager.Iwlan.KEY_RETRANSMIT_TIMER_MSEC_INT_ARRAY);
-        boolean isValid = true;
-        if (timeList == null
-                || timeList.length == 0
-                || timeList.length > IKE_RETRANS_MAX_ATTEMPTS_MAX) {
-            isValid = false;
+    private static class IpPreferenceConflict {
+        final boolean mIsConflict;
+        final int mErrorType;
+
+        private IpPreferenceConflict(boolean isConflict, int errorType) {
+            mIsConflict = isConflict;
+            mErrorType = errorType;
         }
-        for (int time : timeList) {
+
+        private IpPreferenceConflict() {
+            mIsConflict = false;
+            mErrorType = IwlanError.NO_ERROR;
+        }
+    }
+
+    private int[] getRetransmissionTimeoutsFromConfig() {
+        int[] timeList = getConfig(CarrierConfigManager.Iwlan.KEY_RETRANSMIT_TIMER_MSEC_INT_ARRAY);
+        boolean isValid =
+                timeList != null
+                        && timeList.length != 0
+                        && timeList.length <= IKE_RETRANS_MAX_ATTEMPTS_MAX;
+        for (int time : Objects.requireNonNull(timeList)) {
             if (time < IKE_RETRANS_TIMEOUT_MS_MIN || time > IKE_RETRANS_TIMEOUT_MS_MAX) {
                 isValid = false;
                 break;
@@ -2178,21 +2175,18 @@ public class EpdgTunnelManager {
         }
         if (!isValid) {
             timeList =
-                    (int[])
-                            IwlanHelper.getDefaultConfig(
-                                    CarrierConfigManager.Iwlan.KEY_RETRANSMIT_TIMER_MSEC_INT_ARRAY);
+                    IwlanHelper.getDefaultConfig(
+                            CarrierConfigManager.Iwlan.KEY_RETRANSMIT_TIMER_MSEC_INT_ARRAY);
         }
         Log.d(TAG, "getRetransmissionTimeoutsFromConfig: " + Arrays.toString(timeList));
         return timeList;
     }
 
     private int getDpdDelayFromConfig() {
-        int dpdDelay = (int) getConfig(CarrierConfigManager.Iwlan.KEY_DPD_TIMER_SEC_INT);
+        int dpdDelay = getConfig(CarrierConfigManager.Iwlan.KEY_DPD_TIMER_SEC_INT);
         if (dpdDelay < IKE_DPD_DELAY_SEC_MIN || dpdDelay > IKE_DPD_DELAY_SEC_MAX) {
             dpdDelay =
-                    (int)
-                            IwlanHelper.getDefaultConfig(
-                                    CarrierConfigManager.Iwlan.KEY_DPD_TIMER_SEC_INT);
+                    IwlanHelper.getDefaultConfig(CarrierConfigManager.Iwlan.KEY_DPD_TIMER_SEC_INT);
         }
         return dpdDelay;
     }
@@ -2208,7 +2202,7 @@ public class EpdgTunnelManager {
      * incremented in multiples of 1 minute 1 1 0 value is incremented in multiples of 1 hour 1 1 1
      * value indicates that the timer is deactivated.
      *
-     * @param backoffTimerByte Byte value obtained from ike
+     * @param backoffTimeByte Byte value obtained from ike
      * @return long time value in seconds. -1 if the timer needs to be deactivated.
      */
     private static long decodeBackoffTime(byte backoffTimeByte) {
@@ -2216,12 +2210,12 @@ public class EpdgTunnelManager {
         final int BACKOFF_TIMER_UNIT_MASK = 0xE0;
         final Long[] BACKOFF_TIMER_UNIT_INCREMENT_SECS = {
             10L * 60L, // 10 mins
-            1L * 60L * 60L, // 1 hour
+            60L * 60L, // 1 hour
             10L * 60L * 60L, // 10 hours
             2L, // 2 seconds
             30L, // 30 seconds
-            1L * 60L, // 1 minute
-            1L * 60L * 60L, // 1 hour
+            60L, // 1 minute
+            60L * 60L, // 1 hour
         };
 
         long time = backoffTimeByte & BACKOFF_TIME_VALUE_MASK;
@@ -2235,8 +2229,7 @@ public class EpdgTunnelManager {
 
     @VisibleForTesting
     String getTunnelSetupRequestApnName(TunnelSetupRequest setupRequest) {
-        String apnName = setupRequest.apnName();
-        return apnName;
+        return setupRequest.apnName();
     }
 
     @VisibleForTesting
@@ -2244,7 +2237,7 @@ public class EpdgTunnelManager {
             String apnName,
             IkeSession ikeSession,
             TunnelCallback tunnelCallback,
-            TunnelCallbackMetrics tunnelCallbackMetrics,
+            TunnelMetricsInterface tunnelMetrics,
             InetAddress srcIpv6Addr,
             int srcIPv6AddrPrefixLen) {
         mApnNameToTunnelConfig.put(
@@ -2252,7 +2245,7 @@ public class EpdgTunnelManager {
                 new TunnelConfig(
                         ikeSession,
                         tunnelCallback,
-                        tunnelCallbackMetrics,
+                        tunnelMetrics,
                         srcIpv6Addr,
                         srcIPv6AddrPrefixLen));
         Log.d(TAG, "Added apn: " + apnName + " to TunnelConfig");
@@ -2268,20 +2261,24 @@ public class EpdgTunnelManager {
     }
 
     @VisibleForTesting
+    boolean isN1ModeSupported() {
+        int[] nrCarrierCaps =
+                getConfig(CarrierConfigManager.KEY_CARRIER_NR_AVAILABILITIES_INT_ARRAY);
+        Log.d(TAG, "KEY_CARRIER_NR_AVAILABILITIES_INT_ARRAY : " + Arrays.toString(nrCarrierCaps));
+        if (Arrays.stream(nrCarrierCaps)
+                .anyMatch(cap -> cap == CarrierConfigManager.CARRIER_NR_AVAILABILITY_SA)) {
+            return true;
+        } else return false;
+    }
+
+    @VisibleForTesting
     boolean isTunnelConfigContainExistApn(String apnName) {
-        boolean ret = mApnNameToTunnelConfig.containsKey(apnName);
-        return ret;
+        return mApnNameToTunnelConfig.containsKey(apnName);
     }
 
     @VisibleForTesting
     List<InetAddress> getAddressForNetwork(Network network, Context context) {
-        List<InetAddress> ret = IwlanHelper.getAddressesForNetwork(network, context);
-        return ret;
-    }
-
-    @VisibleForTesting
-    EpdgSelector.EpdgSelectorCallback getSelectorCallback() {
-        return mSelectorCallback;
+        return IwlanHelper.getAddressesForNetwork(network, context);
     }
 
     @VisibleForTesting
@@ -2351,8 +2348,14 @@ public class EpdgTunnelManager {
     }
 
     @VisibleForTesting
-    void setHasConnectedToEpdg(boolean value) {
-        mHasConnectedToEpdg = value;
+    void onConnectedToEpdg(boolean hasConnected) {
+        mHasConnectedToEpdg = hasConnected;
+        if (mHasConnectedToEpdg) {
+            mIkeSessionNetwork = mDefaultNetwork;
+        } else {
+            mIkeSessionNetwork = null;
+            mEpdgAddress = null;
+        }
     }
 
     @VisibleForTesting
@@ -2395,32 +2398,22 @@ public class EpdgTunnelManager {
     }
 
     @VisibleForTesting
-    boolean isIpPreferenceConflictsWithNetwork(
-            @CarrierConfigManager.Iwlan.EpdgAddressIpPreference int ipPreference, Network network) {
-        mLocalAddresses = getAddressForNetwork(mNetwork, mContext);
-        if (mLocalAddresses == null || mLocalAddresses.size() == 0) {
-            Log.e(TAG, "No local addresses available.");
-            return true;
-        }
-
-        int sourceIpType = EpdgSelector.PROTO_FILTER_IPV4V6;
-        if (!IwlanHelper.hasIpv6Address(mLocalAddresses)) {
-            sourceIpType = EpdgSelector.PROTO_FILTER_IPV4;
-        }
-        if (!IwlanHelper.hasIpv4Address(mLocalAddresses)) {
-            sourceIpType = EpdgSelector.PROTO_FILTER_IPV6;
-        }
-
-        if (sourceIpType == EpdgSelector.PROTO_FILTER_IPV4
+    IpPreferenceConflict isIpPreferenceConflictsWithNetwork(
+            @CarrierConfigManager.Iwlan.EpdgAddressIpPreference int ipPreference) {
+        List<InetAddress> localAddresses = getAddressForNetwork(mDefaultNetwork, mContext);
+        if (localAddresses == null || localAddresses.size() == 0) {
+            Log.e(TAG, "No local addresses available for Network " + mDefaultNetwork);
+            return new IpPreferenceConflict(true, IwlanError.EPDG_SELECTOR_SERVER_SELECTION_FAILED);
+        } else if (!IwlanHelper.hasIpv6Address(localAddresses)
                 && ipPreference == CarrierConfigManager.Iwlan.EPDG_ADDRESS_IPV6_ONLY) {
             Log.e(
                     TAG,
                     "ePDG IP preference: "
                             + ipPreference
                             + " conflicts with source IP type: "
-                            + sourceIpType);
-            return true;
-        } else if (sourceIpType == EpdgSelector.PROTO_FILTER_IPV6
+                            + EpdgSelector.PROTO_FILTER_IPV4);
+            return new IpPreferenceConflict(true, IwlanError.EPDG_ADDRESS_ONLY_IPV6_ALLOWED);
+        } else if (!IwlanHelper.hasIpv4Address(localAddresses)
                 && ipPreference == CarrierConfigManager.Iwlan.EPDG_ADDRESS_IPV4_ONLY) {
             // b/209938719 allows Iwlan to support VoWiFi for IPv4 ePDG server while on IPv6 WiFi.
             // Iwlan will receive a IPv4 address which is embedded in stacked IPv6 address. By using
@@ -2432,15 +2425,16 @@ public class EpdgTunnelManager {
                     "ePDG IP preference: "
                             + ipPreference
                             + " conflicts with source IP type: "
-                            + sourceIpType);
-            return true;
+                            + EpdgSelector.PROTO_FILTER_IPV6);
+            return new IpPreferenceConflict(true, IwlanError.EPDG_ADDRESS_ONLY_IPV4_ALLOWED);
         }
-        return false;
+        return new IpPreferenceConflict();
     }
 
-    public void dump(FileDescriptor fd, PrintWriter pw, String[] args) {
+    public void dump(PrintWriter pw) {
         pw.println("---- EpdgTunnelManager ----");
         pw.println("mHasConnectedToEpdg: " + mHasConnectedToEpdg);
+        pw.println("mIkeSessionNetwork: " + mIkeSessionNetwork);
         if (mEpdgAddress != null) {
             pw.println("mEpdgAddress: " + mEpdgAddress);
         }
